feat: fixes to the apps, now they run

--- a/docker/web-server/Dockerfile
+++ b/docker/web-server/Dockerfile
@@ -1,11 +1,14 @@
 # Use an official Node.js runtime as base image
-FROM node:14
+FROM node:18
 
 # Set working directory in Docker image
 WORKDIR /usr/src/app
 
 # Copy package.json and package-lock.json (if available) to the root directory of our app
 COPY ./web-server/package*.json ./
+
+# Copy tsconfig.json
+COPY ./web-server/tsconfig.json ./
 
 # Install project dependencies
 RUN npm install
