--- a/cli-app/package.json
+++ b/cli-app/package.json
@@ -3,17 +3,23 @@
   "version": "1.0.0",
   "description": "A CLI app that receives commands and returns responses",
   "main": "dist/cli.js",
+  "pkg": {
+    "scripts": "dist/**/*.js",
+    "assets": "dist/**/*"
+  },
   "scripts": {
     "start": "node dist/cli.js",
-    "build": "tsc",
+    "build": "tsc && pkg -t node18-linux dist/cli.js ",
     "dev": "ts-node src/cli.ts"
   },
   "devDependencies": {
     "@types/node": "^20.5.6",
+    "dotenv": "^16.3.1",
+    "pkg": "^5.8.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.9.5"
   },
   "bin": {
-    "cli-app": "./dist/cli.js"
+    "cli-app": "./dist/cli-app"
   }
 }
