--- a/web-server/package.json
+++ b/web-server/package.json
@@ -4,18 +4,18 @@
   "description": "A web server that handles requests and communicates with the CLI app",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/app.js",
     "build": "tsc",
-    "dev": "ts-node src/server.ts"
+    "dev": "ts-node src/app.ts"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "typescript": "^4.3.5",
-    "ts-node": "^9.1.1",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.5.6"
+    "@types/node": "^20.5.6",
+    "ts-node": "^9.1.1",
+    "typescript": "^5.2.2"
   }
 }
