feat: added more configs

--- a/.env.shared
+++ b/.env.shared
@@ -1,2 +1,5 @@
+ARCHITECTOR_PROMPT_VERSION = 0.1.3
+WORKER_PROMPT_VERSION = 0.4.5
 BASE_DIR  = microservices
-GPT_MODEL = gpt-3.5-turbo
+GPT_WORKER_MODEL = gpt-3.5-turbo
+GPT_ARCHITECTOR_MODEL = gpt-4
