--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
       {
         "name": "structure_architector",
         "description": "AI Entity responsible for managing the structure of the system",
-        "system_prompts": ["architector.project_structure.0_1"],
+        "system_prompts": ["architector.project_structure.system.0_1"],
         "assistant_prompts": [],
         "user_prompts": [],
         "ignore_general_system_prompts": false,
@@ -14,7 +14,7 @@
       {
         "name": "file_architector",
         "description": "AI Entity responsible for managing the files in the system",
-        "system_prompts": ["architector.file_description.0_1"],
+        "system_prompts": ["architector.file_description.system.0_1"],
         "assistant_prompts": [],
         "user_prompts": [],
         "ignore_general_system_prompts": false,
@@ -24,7 +24,7 @@
     ],
     "workers": [
       {
-        "name": "generator",
+        "name": "initial_generator",
         "description": "AI Entity responsible for generating content",
         "system_prompts": [],
         "assistant_prompts": [],
@@ -32,23 +32,22 @@
         "ignore_general_system_prompts": false,
         "model": "gpt-3.5-turbo",
         "temperature": "0.29"
-      }
-    ],
-    "acceptance": [
+      },
       {
-        "name": "structure_acceptance",
-        "description": "",
+        "name": "generation_checker",
+        "description": "AI Entity responsible for checking the generated content",
         "system_prompts": [],
         "assistant_prompts": [],
-        "user_prompts": [],
+        "user_prompts": ["worker.quality_assurance.0_1"],
         "ignore_general_system_prompts": false,
-        "model": "gpt-4",
-        "temperature": "0.42"
+        "model": "gpt-3.5-turbo",
+        "temperature": "0.22"
       }
     ],
+    "acceptance": [],
 
-    "general_architector_system_prompt": "architector.0_2",
-    "general_worker_system_prompt": "worker.0_4_7"
+    "general_architector_system_prompt": "architector.system.0_2",
+    "general_worker_system_prompt": "worker.system.0_4_7"
   },
   "base_dir": "microservices"
 }
